--- a/app/views/dashboard/edit.html.erb
+++ b/app/views/dashboard/edit.html.erb
@@ -1,5 +1,5 @@
-<% provide(:title, '系统设置') %>
-<h1 class="page-header">系统设置</h1>
+<% provide(:title, '脚本设置') %>
+<h1 class="page-header">脚本设置</h1>
 <div class="bs-example">
 <%= simple_form_for @setting, url: setting_path, method: :post, html: {class: 'form'} do |f| %>
   <%= render :partial => 'form', :locals => { :f => f } %>
